--- a/src/my_project_frontend/src/index.scss
+++ b/src/my_project_frontend/src/index.scss
@@ -1,37 +1,44 @@
-body {
-  font-family: sans-serif;
-  font-size: 1.5rem;
-}
-
-img {
-  max-width: 50vw;
-  max-height: 25vw;
-  display: block;
-  margin: auto;
-}
-
-form {
-  display: flex;
-  justify-content: center;
-  gap: 0.5em;
-  flex-flow: row wrap;
-  max-width: 40vw;
-  margin: auto;
-  align-items: baseline;
-}
-
-button[type="submit"] {
-  padding: 5px 20px;
-  margin: 10px auto;
-  float: right;
-}
-
-#greeting {
-  margin: 10px auto;
-  padding: 10px 60px;
-  border: 1px solid #222;
-}
-
-#greeting:empty {
-  display: none;
-}
+body,html {
+    margin: 0;
+    padding: 0;
+    font-family: "Montserrat", sans serif;
+    background-color:#1e71cf;
+  
+  }
+  
+  .app-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 64px;
+  
+  }
+  
+  main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  
+  }
+  
+  h2{
+    font-size: 2.5rem;
+    color: #fff;
+    margin-bottom: 20px;
+  }
+  
+  a{
+    text-decoration: a;
+    color: cyan;
+    transition: 0.3s;
+  
+    &:hover {
+      color: #f39c12;
+  }
+  }
+  
+  .class{
+    max-height: 100%;
+    max-width: 100%;
+  }
